<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Менеджер расходов</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="screen_operation">Операция</string>
    <string name="screen_operations">Операции</string>
    <string name="screen_order">Счет</string>
    <string name="screen_orders">Счета</string>
    <string name="screen_budget">Бюджет</string>
    <string name="screen_budgets">Бюджеты</string>
    <string name="screen_report">Отчет</string>
    <string name="screen_reports">Отчеты</string>
    <string name="screen_outs">Расходы</string>
    <string name="screen_ins">Доходы</string>
    <string name="screen_source">Источник</string>
    <string name="screen_source_new">Новый источник</string>
    <string name="screen_sources">Источники</string>
    <string name="screen_destinations">Назначения</string>
    <string name="screen_category_new">Новая категория</string>
    <string name="screen_destination_new">Новое категория</string>

    <string name="lblType">Тип</string>
    <string-array name="lblTypes">
        <item>Расход</item>
        <item>Доход</item>
    </string-array>
    <string name="lblDate">Дата</string>
    <string name="lblSource">Источник</string>
    <string name="lblCount">Количество</string>
    <string name="lblSum">Сумма</string>
    <string name="lblCost">Сумма за единицу</string>
    <string name="lblDestination">Назначение</string>
    <string name="lblComment">Комментарий</string>
    <string name="lblTotal">Итого</string>
    <string name="lblTitle">Название</string>
    <string name="lblCurrency">Валюта</string>
    <string name="lblCategory">Категория</string>

    <string name="action_add">Добавить</string>
    <string name="action_add_category">Добавить категорию</string>
    <string name="action_save">Cохранить</string>
    <string name="action_cancel">Отмена</string>
    <string name="action_clear">Очистить</string>
    <string name="action_edit">Редактировать</string>
    <string name="action_delete">Удалить</string>
    <string name="action_calendar">Календарь</string>

    <string name="msgValidationCount">Количество не может быть меньше 1</string>
    <string name="msgValidationCost">Сумма не может быть меньше 0,01</string>
    <string name="msgValidationSource">Пожалуйста выберите источник</string>
    <string name="msgValidationDestination">Пожалуйста выберите назначение</string>
    <string name="msgValidationCurrency">Пожалуйста выберите валюту</string>
    <string name="msgValidationTitle">Пожалуйста введите название</string>
    <string name="msgValidationSum">Пожалуйста введите начальную сумму</string>

    <string name="msgValidationRemoveLastSource">Вы не можете удалить последний источник</string>

    <string name="msgValidationRemoveDefaultDestination">Вы не можете удалить стандарные назначения</string>
    <string name="msgValidationEditDefaultDestination">Вы не можете редактировать стандарные назначения</string>

    <string name="msgValidationRemoveDefaultCategory">Вы не можете удалить стандарные категории</string>
    <string name="msgValidationEditDefaultCategory">Вы не можете редактировать стандарные категории</string>

    <string name="msgSuccessAddSource">Источник успешно добавлен</string>
    <string name="msgSuccessUpdateSource">Источник успешно обновлен</string>
    <string name="msgSuccessRemoveSource">Источник успешно удален</string>

    <string name="msgSuccessAddDestination">Назначение успешно добавлено</string>
    <string name="msgSuccessUpdateDestination">Назначение успешно обновлено</string>
    <string name="msgSuccessRemoveDestination">Назначение успешно удалено</string>

    <string name="msgSuccessAddCategory">Категория успешно добавлена</string>
    <string name="msgSuccessUpdateCategory">Категория успешно обновлена</string>
    <string name="msgSuccessRemoveCategory">Категория успешно удалена</string>

    <string name="msgSuccessAddOperation">Операция успешно добавлена</string>
    <string name="msgSuccessUpdateOperation">Операция успешно обновлена</string>
    <string name="msgSuccessRemoveOperation">Операция успешно удалена</string>

    <string name="msgErrorAddOperation">Ошибка при добавлении операции. Повторите пожалуйста попытку</string>
    <string name="msgErrorUpdateOperation">Ошибка при обновлении операции. Повторите пожалуйста попытку</string>
    <string name="msgErrorEmptySource">Не хватает средств у источника</string>

</resources>
